base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      # initContainers:
      #   - name: copy-html
      #     image: busybox
      #     command:
      #       - sh
      #       - -c
      #       - echo '<html> <head> <title>My Custom NGINX Page</title> </head> <body style="display:flex;justify-content:center;align-items:center;"> <h1>Welcome to My Custom NGINX Page!</h1> <p>This page is from the pods in testing namespace</p> </body> </html>' > /tmp/index.html
      #     volumeMounts:
      #       - name: html-volume
      #         mountPath: /tmp
      containers:
        - name: app
          image: nginx:alpine
          volumeMounts:
            - name: nginx-config
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-html-content
